--- a/camelclub.html
+++ b/camelclub.html
@@ -29,7 +29,7 @@
           <div class="navbar-nav ml-auto">
             <a class="nav-item p-2 mx-3" href="#seasons">Seasons</a>
             <a class="nav-item p-2 mx-3" href="#roadmap">Roadmap</a>
-            <a class="nav-item p-2 mx-3" href="#about">About</a>
+            <a class="nav-item p-2 mx-3" href="#trade">Trade</a>
             <a class="nav-item p-2 mx-3" href="#FAQ">FAQ</a>
             <div class="form-inline my-0">
               <a class="nav-item pt-2 pl-2 pr-2 mx-3" href="https://discord.com/invite/m8hsYUJ7" target="_blank">
@@ -117,19 +117,19 @@
 
       <div id="season" class="row text-center m-0 p-3 p-md-4">
         <div class="col-md-6 my-auto">
-          <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-season">
+          <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG">
             <div class="card-body">
               <h5 class="m-0">Original (OG) Drop</h5>
               <p class="card-text">The original camels that started it all</p>
           </div>
           </div>
-          <div id="WOF" class="card my-3 var-season rounded-element thin-border black">
+          <div id="WOF" class="card my-3 py-lg-3 var-season rounded-element thin-border black">
             <div class="card-body">
               <h5 class="m-0">Camel Club: Wall of Fame</h5>
               <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
           </div>
           </div>
-          <div id="3D" class="card my-3 py-2 var-season rounded-element thin-border black">
+          <div id="3D" class="card my-3 py-2 py-lg-3 var-season rounded-element thin-border black">
             <div class="card-body">
               <h5 class="m-0"> Camel Club: 3D</h5>
               <p class="card-text"> Our beloved now camels in 3D with 130+ original traits. Coming soon! </p>
@@ -200,8 +200,9 @@
     </section>
 
 
-    <a class="anchor" id="about"></a>
-    <section id="trade" class="mx-3 mx-md-4 text-center rounded-top-element white">
+    <a class="anchor" id="trade"></a>
+    <!-- <section id="trade" class="mx-3 mx-md-4 text-center rounded-top-element white"> -->
+    <section id="trade" class="text-center rounded-top-element white">
       <div class="row m-0 pt-4 px-4">
         <div class="col-12">
           <h1>Where to Trade</h1>
@@ -236,7 +237,7 @@
 
       </div>
     </section>
-    <section id="theteam" class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
+    <!-- <section id="theteam" class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
       <div class="row m-0 px-4">
         <div class="col-12">
           <h1>The Team</h1>
@@ -264,7 +265,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <a class="anchor" id="FAQ"></a>
     <section class="p-md-4 py-4 black rounded-top-element">
