added intersection obsrvr

--- a/camelclub.html
+++ b/camelclub.html
@@ -105,7 +105,7 @@
     </div>
 
     <a class="anchor" id="ourcaravan"></a>
-    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
+    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center hidden1">
       <div class="row m-0 px-lg-4 px-3">
         <div class="col-12">
           <h1>Our Caravan</h1>
@@ -114,21 +114,21 @@
         </div>
       </div>
 
-      <div id="season" class="row text-justified m-0 p-3 p-md-4">
+      <div class="row text-justified m-0 p-3 p-md-4">
         <div class="col-md-6 my-auto">
-          <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG">
+          <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG hidden1">
             <div class="card-body">
               <h5 class="m-0">Original (OG) Drop</h5>
               <p class="card-text">The original camels that started it all</p>
           </div>
           </div>
-          <div id="WOF" class="card my-3 py-lg-3 var-season rounded-element thin-border black">
+          <div id="WOF" class="card my-3 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0">Camel Club: Wall of Fame</h5>
               <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
           </div>
           </div>
-          <div id="3D" class="card my-3 py-2 py-lg-3 var-season rounded-element thin-border black">
+          <div id="3D" class="card my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0"> Camel Club: 3D</h5>
               <p class="card-text"> Our beloved now camels in 3D with 130+ original traits. Coming soon! </p>
@@ -143,7 +143,7 @@
     </section>
 
     <a class="anchor" id="roadmap"></a>
-    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
+    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element hidden1">
       <div class="row m-0 px-lg-4 text-center">
         <div class="col-12 lg-px-4">
           <h1>Roadmap</h1>
