--- a/camelclub.html
+++ b/camelclub.html
@@ -105,7 +105,7 @@
     </section>
 
     <a class="anchor" id="ourcaravan"></a>
-    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center hidden1">
+    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
       <div class="row m-0 px-lg-4 px-3">
         <div class="col-12">
           <h1>Our Caravan</h1>
