added scroll down animation

--- a/camelclub.html
+++ b/camelclub.html
@@ -49,7 +49,7 @@
     </nav>
   </header>
   <main>
-    <div id="spacer" class=""></div>
+    <div id="spacer"></div>
     <section id="landing" class="d-flex align-items-center m-0 pt-0">
       <div id="landing-text" class="container text-center my-auto">
         <h1>Camel Club</h1>
@@ -57,7 +57,8 @@
       </div>
     </section>
     
-    <section id="scroller" class="img_container pb-4">
+    <section id="landingscroller">
+    <section id="scroller" class="img_container">
       <div class="scrolling">
         <img src="Media/4.webp" width="auto" height="200" class="rounded-element px-2">
         <img src="Media/5.webp" width="auto" height="200" class="rounded-element px-2">
@@ -103,6 +104,17 @@
         <img src="Media/24.webp" width="auto" height="200" class="rounded-element px-2">
       </div>
     </section>
+    </section>
+    <div class="row">
+      <div class="col-12 text-center">
+        <svg class="arrows">
+          <path class="a1" d="M0 0 L30 32 L60 0"></path>
+          <path class="a2" d="M0 20 L30 52 L60 20"></path>
+          <path class="a3" d="M0 40 L30 72 L60 40"></path>
+        </svg>
+      </div>
+    </div>
+   
 
     <a class="anchor" id="ourcaravan"></a>
     <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
@@ -137,7 +149,7 @@
 
         </div>
         <div  class="col-md-6 align-items-center my-auto hidden1">
-          <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" style="max-height: 400px" alt="Sample OG Camel">
+          <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" alt="Sample OG Camel">
         </div>
       </div>
     </section>
