--- a/camelclub.html
+++ b/camelclub.html
@@ -51,7 +51,7 @@
   <main>
     <div id="spacer"></div>
     <section id="landing" class="d-flex align-items-center m-0 pt-0">
-      <div id="landing-text" class="container text-center my-auto">
+      <div id="landing-text" class="container text-center mt-auto">
         <h1>Camel Club</h1>
         <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
       </div>
@@ -107,11 +107,12 @@
     </section>
     <div class="row">
       <div class="col-12 text-center">
-        <svg class="arrows">
+        <a href="#ourcaravan"><svg class="arrows">
           <path class="a1" d="M0 0 L30 32 L60 0"></path>
           <path class="a2" d="M0 20 L30 52 L60 20"></path>
           <path class="a3" d="M0 40 L30 72 L60 40"></path>
         </svg>
+      </a>
       </div>
     </div>
    
