--- a/camelclub.html
+++ b/camelclub.html
@@ -53,7 +53,7 @@
     <section id="landing" class="d-flex align-items-center m-0 pt-0">
       <div id="landing-text" class="container text-center mt-auto">
         <h1>Camel Club</h1>
-        <p class="pb-md-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
+        <p class="pb-2 pb-md-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
       </div>
     </section>
     
