--- a/camelclub.html
+++ b/camelclub.html
@@ -389,7 +389,7 @@
     </ul>
     
     <p class="text-muted pt-2 m-0">© 2022 Camel Club</p>
-    <p class="text-muted m-0"> All right reserved</p>
+    <p class="text-muted m-0"> All Right Reserved</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
