--- a/camelclub.html
+++ b/camelclub.html
@@ -288,7 +288,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What are your policy IDs</h6>
         </div>
@@ -321,7 +321,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What rights do I get when I own a Camel Club NFT?</h6>
         </div>
@@ -331,7 +331,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>How do you ensure smooth launchs?</h6>
         </div>
@@ -340,7 +340,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What are your charity efforts?</h6>
         </div>
@@ -351,7 +351,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>Where can I get more information?</h6>
         </div>
@@ -360,7 +360,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top">
+      <div class="row m-0 p-4 border-top hidden1">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>Still Confused...</h6>
         </div>
