--- a/camelclub.html
+++ b/camelclub.html
@@ -105,7 +105,7 @@
       </div>
     </section>
     </section>
-    <div class="row">
+    <div class="row m-0">
       <div class="col-12 text-center">
         <a href="#ourcaravan">
           <svg class="arrows">
