--- a/camelclub.html
+++ b/camelclub.html
@@ -60,16 +60,16 @@
     <section id="landingscroller">
     <section id="scroller" class="img_container">
       <div class="scrolling">
-        <img src="Media/4.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/5.webp" width="auto" height="180" loading="lazy"  class="rounded-element px-2">
-        <img src="Media/6.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/7.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/8.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/9.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/10.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/11.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/13.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
-        <img src="Media/14.webp" width="auto" height="180" loading="lazy"class="rounded-element px-2">
+        <img src="Media/4.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/5.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/6.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/7.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/8.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/9.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/10.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/11.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/13.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="Media/14.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="Media/15.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
         <img src="Media/16.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
         <img src="Media/17.webp" width="auto" height="180" loading="lazy" class="rounded-element px-2">
@@ -392,7 +392,6 @@
     <p class="text-muted m-0"> All Right Reserved</p>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="camelclub.js"></script>
