--- a/camelclub.html
+++ b/camelclub.html
@@ -119,7 +119,7 @@
    
 
     <a class="anchor" id="ourcaravan"></a>
-    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
+    <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center hidden1">
       <div class="row m-0 px-lg-4 px-3">
         <div class="col-12">
           <h1>Our Caravan</h1>
@@ -157,7 +157,7 @@
     </section>
 
     <a class="anchor" id="roadmap"></a>
-    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
+    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element hidden1">
       <div class="row m-0 px-lg-4 text-center">
         <div class="col-12 lg-px-4">
           <h1>Roadmap</h1>
