--- a/camelclub.html
+++ b/camelclub.html
@@ -53,7 +53,7 @@
     <section id="landing" class="d-flex align-items-center m-0 pt-0">
       <div id="landing-text" class="container text-center mt-sm-auto">
         <h1>Camel Club</h1>
-        <p class="pb-2 pb-md-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
+        <p class="pb-md-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
       </div>
     </section>
     
@@ -157,7 +157,7 @@
     </section>
 
     <a class="anchor" id="roadmap"></a>
-    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element hidden1">
+    <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
       <div class="row m-0 px-lg-4 text-center">
         <div class="col-12 lg-px-4">
           <h1>Roadmap</h1>
