--- a/camelclub.html
+++ b/camelclub.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="camelclubstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<body class="mx-0">
+<body>
   <header class="site-header">
     <nav class="navbar navbar-expand-md fixed-top black navbar-dark">
       <div class="container">
