--- a/camelclub.html
+++ b/camelclub.html
@@ -11,7 +11,6 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="camelclubstyle.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -141,19 +140,19 @@
 
       <div class="row text-justified m-0 p-3 p-md-4">
         <div class="col-md-6 my-auto">
-          <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG hidden1">
+          <div id="OG" class="mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG hidden1">
             <div class="card-body">
               <h5 class="m-0">Original (OG) Drop</h5>
               <p class="card-text">The original camels that started it all</p>
           </div>
           </div>
-          <div id="WOF" class="card my-3 py-lg-3 var-season rounded-element thin-border black hidden1">
+          <div id="WOF" class="my-3 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0">Camel Club: Wall of Fame</h5>
               <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
           </div>
           </div>
-          <div id="3D" class="card my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
+          <div id="3D" class="my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0"> Camel Club: 3D</h5>
               <p class="card-text"> Our beloved now camels in 3D with 130+ original traits. Coming soon! </p>
@@ -240,7 +239,6 @@
             </div>
           </div>
         </div>
-      
 
         <div id="ghouse" class="col-sm-12 col-lg-4 my-1">
           <div  class="card camel rounded-element grow-button hidden1">
@@ -257,38 +255,8 @@
             </div>
           </div>
         </div>
-
       </div>
     </section>
-    <!-- <section id="theteam" class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
-      <div class="row m-0 px-4">
-        <div class="col-12">
-          <h1>The Team</h1>
-        </div>
-      </div>
-      <div class="row m-0 pt-2 px-4">
-        <div class="col-md-6 my-1">
-          <div class="rounded-element mb-4 black float-md-right">
-            <div class="card-body p-0">
-              <img class="rounded-circle my-2 border-element" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
-              <h5 class="card-text camel-text">@skycamel</h5>
-              <p>Project Management</p>
-              <p class="lightfw px-md-2">He's in business meetings all day, but in the Camel Club all night</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 my-1">
-          <div  class="rounded-element mb-4 black float-md-left">
-            <div class="card-body p-0">
-              <img class="rounded-circle my-2 border-element" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
-              <h5 class="card-text camel-text">@camelita</h5>
-              <p>Design & Development</p>
-              <p class="lightfw px-md-2"> Artist and software developer when she's not herding camels</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <a class="anchor" id="FAQ"></a>
     <section class="p-md-4 py-4 black rounded-top-element">
@@ -402,6 +370,7 @@
     <p class="text-muted m-0"> All Right Reserved</p>
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="camelclub.js"></script>
