--- a/camelclub.html
+++ b/camelclub.html
@@ -266,7 +266,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What are your policy IDs</h6>
         </div>
@@ -299,7 +299,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What rights do I get when I own a Camel Club NFT?</h6>
         </div>
@@ -309,7 +309,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>How do you ensure smooth launchs?</h6>
         </div>
@@ -318,7 +318,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>What are your charity efforts?</h6>
         </div>
@@ -329,7 +329,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>Where can I get more information?</h6>
         </div>
@@ -338,7 +338,7 @@
         </div>
       </div>
 
-      <div class="row m-0 p-4 border-top hidden1">
+      <div class="row m-0 p-4 border-top">
         <div class="col-md-6 col-sm-12 text-left">
           <h6>Still Confused...</h6>
         </div>
