--- a/camelclub.html
+++ b/camelclub.html
@@ -55,7 +55,7 @@
         <p class="mx-auto">A collection of over 5000 camels that live on the Cardano blockchain. Each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
         
         <a href="https://discord.com/invite/m8hsYUJ7" target="_blank">
-          <div role="button" class="rounded-element camel mx-auto mb-md-5 grow-button hidden1" style="max-width: 300px;">
+          <div role="button" tabIndex="0" class="rounded-element camel mx-auto mb-md-5 grow-button hidden1" style="max-width: 300px;">
             <h5>
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="var(--black)" class="mx-2 bi bi-discord" viewBox="0 -2.5 16 16">
                 <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
@@ -140,19 +140,19 @@
 
       <div class="row text-justified m-0 p-3 p-md-4">
         <div class="col-md-6 my-auto">
-          <div id="OG" role="button" class="mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG hidden1">
+          <div id="OG" role="button" tabIndex="0" class="mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-OG hidden1">
             <div class="card-body">
               <h5 class="m-0">Original (OG) Drop</h5>
               <p class="card-text">The original camels that started it all</p>
           </div>
           </div>
-          <div id="WOF" role="button" class="my-3 py-lg-3 var-season rounded-element thin-border black hidden1">
+          <div id="WOF" role="button" tabIndex="0" class="my-3 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0">Camel Club: Wall of Fame</h5>
               <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
           </div>
           </div>
-          <div id="3D" role="button" class="my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
+          <div id="3D" role="button" tabIndex="0" class="my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0"> Camel Club: 3D</h5>
               <p class="card-text"> Our beloved now camels in 3D with 130+ original traits. Coming soon! </p>
@@ -232,7 +232,7 @@
       </div>
 
       <div class="row m-0 pt-2 pl-4 pr-4 pb-4">
-        <div id="jstore" class="col-sm-12 col-lg-4 my-1">
+        <div id="jstore" role=button tabIndex="0" class="col-sm-12 col-lg-4 my-1">
           <div class="card camel rounded-element grow-button hidden1">
             <div class="card-body">
               <h5 class="card-text">jpg.store</h5>
@@ -240,7 +240,7 @@
           </div>
         </div>
 
-        <div id="ghouse" class="col-sm-12 col-lg-4 my-1">
+        <div id="ghouse" role="button" tabIndex="0" class="col-sm-12 col-lg-4 my-1">
           <div  class="card camel rounded-element grow-button hidden1">
             <div class="card-body">
               <h5 class="card-text">genesishouse.io</h5>
@@ -248,7 +248,7 @@
           </div>
         </div>
 
-        <div id="cnft" class="col-sm-12 col-lg-4 my-1">
+        <div id="cnft" role="button" tabIndex="0" class="col-sm-12 col-lg-4 my-1">
           <div  class="card camel rounded-element grow-button hidden1">
             <div class="card-body">
               <h5 class="card-text">CNFT.io</h5>
