changed hamburger toggle

--- a/camelclub.html
+++ b/camelclub.html
@@ -21,7 +21,9 @@
         </a>
 
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarToggle">
@@ -49,7 +51,7 @@
   </header>
   <main>
     <div id="spacer"></div>
-    <section id="landing" class="d-flex align-items-center m-0 pt-0">
+    <section id="landing" class="align-items-center m-0 pt-0">
       <div id="landing-text" class="container text-center mt-md-auto box-text">
         <h1>Camel Club</h1>
         <p class="mx-auto">A collection of over 5000 camels that live on the Cardano blockchain. Each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
