changed nav opacity at top

--- a/camelclub.html
+++ b/camelclub.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header class="site-header">
-    <nav class="navbar navbar-expand-md fixed-top black navbar-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
       <div class="container">
         <a class="navbar-brand mx-2 p-0" href="#">
           <img id=logo src="Media/cclogo.svg" alt="Camel Club" height="48px" class="pt-2">
