nav color visibility

--- a/camelclub.html
+++ b/camelclub.html
@@ -157,7 +157,7 @@
           <div id="3D" role="button" tabIndex="0" class="my-3 py-2 py-lg-3 var-season rounded-element thin-border black hidden1">
             <div class="card-body">
               <h5 class="m-0"> Camel Club: 3D</h5>
-              <p class="card-text"> Our beloved now camels in 3D with 130+ original traits. Coming soon! </p>
+              <p class="card-text"> Our beloved camels now in 3D with 130+ original traits. Coming soon! </p>
             </div>
           </div>
 
