--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                   </ul>
                   <li class="camel-text"><h5>$HUMP Token Drop</h5></li>
                   <li>Implement 3D Camel Staking for $HUMP token on our website</li>
-                  <li>Begin <span class="camel-text">Camel Racing</span> Development - Bringing NFT based camel racing to Cardano</li>
+                  <li>Begin Camel Racing Development - Bringing NFT based camel racing to Cardano</li>
                   <li> Airdrop special lottery-style NFT prizes to holders from S1 and 3D. </li>
                 </ul>
                 <p class=" mb-2 pt-0 camel-text">2023 Q2</p>
