--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="camelclubstyle.css">
 </head>
@@ -241,9 +240,9 @@
                   <li class="camel-text"><h5>Camel Saddle NFT Launch</h5></li>
                   <ul>
                     <li>Limited number of camel saddles to be airdropped and sold</li>
-                    <li>Racers will need to hold both a 3D Camel NFT and a Camel Saddle NFT qualify for races</li>
-                    <li>Finalize development of Camel Racing NFT Game</li>
+                    <li>Racers will need to hold both a 3D Camel NFT and a Camel Saddle NFT to qualify for races</li>
                   </ul>
+                  <li>Finalize development of Camel Racing NFT Game</li>
                 </ul>
                 <p class=" mb-2 pt-0 camel-text">2023 Q3</p>
                 <ul class="lightfw">
