update meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#bc873c"/>
+    // Bare Minimum 
+    <meta property="og:title" content="Camel Club CNFT"> 
+    <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain"> 
+    <meta property="og:image" content="media/thumbnail.jpg"> 
+    <meta property="og:url" content="https://camelclubnft.com"> 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="Camel Club CNFT">
+
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
