--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     // Bare Minimum 
     <meta property="og:title" content="Camel Club CNFT"> 
     <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain"> 
-    <meta property="og:image" content="media/thumbnail.jpg"> 
+    <meta property="og:image" content="https:camelclubcnft.github.io/Media/thumbnail.jpg"> 
     <meta property="og:url" content="https://camelclubnft.com"> 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Camel Club CNFT">
