--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     <meta property="og:title" content="Camel Club CNFT"> 
     <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain"> 
     <meta property="og:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg"> 
-    <meta property="og:image" content="http://example.com/logo.jpg">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://camelclubnft.com"> 
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
     <meta property="og:site_name" content="Camel Club CNFT">
 
     <link rel="icon" href="Media/camel-logo.png">
