update meta social tags

--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#bc873c"/>
-    // Bare Minimum 
-    <meta property="og:title" content="Camel Club CNFT"> 
-    <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain"> 
-    <meta property="og:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg"> 
-    <meta property="og:url" content="https://camelclubnft.com"> 
-    <meta name="twitter:card" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
-    <meta property="og:site_name" content="Camel Club CNFT">
+        <!-- Primary Meta Tags -->
+    <title>Camel Club CNFT</title>
+    <meta name="title" content="Camel Club CNFT">
+    <meta name="description" content="The official website for the OG Camels on the Cardano Blockchain">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://camelclubcnft.com/">
+    <meta property="og:title" content="Camel Club CNFT">
+    <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain">
+    <meta property="og:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://camelclubcnft.com/">
+    <meta property="twitter:title" content="Camel Club CNFT">
+    <meta property="twitter:description" content="The official website for the OG Camels on the Cardano Blockchain">
+    <meta property="twitter:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
