--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <meta property="og:url" content="https://camelclubcnft.com/">
     <meta property="og:title" content="Camel Club CNFT">
     <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain">
-    <meta property="og:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
+    <meta property="og:image" content="https://camelclubcnft.com/Media/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://camelclubcnft.com/">
     <meta property="twitter:title" content="Camel Club CNFT">
     <meta property="twitter:description" content="The official website for the OG Camels on the Cardano Blockchain">
-    <meta property="twitter:image" content="https://camelclubcnft.github.io/Media/thumbnail.jpg">
+    <meta property="twitter:image" content="https://camelclubcnft.com/Media/thumbnail.jpg">
+    
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
