--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a class="nav-item p-2 mx-3" href="#trade">Trade</a>
             <a class="nav-item p-2 mx-3" href="#FAQ">FAQ</a>
             <div class="form-inline my-0">
-              <a class="nav-item pt-2 pl-2 pr-2 mx-2" href="https://discord.gg/VhYBSJFd" target="_blank">
+              <a class="nav-item pt-2 pl-2 pr-2 mx-2" href="https://discord.gg/wAAmk9rVjb" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
                   <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
                 </svg>
@@ -83,7 +83,7 @@
         <h1>Camel Club</h1>
         <p class="mx-auto">A collection of over 5000 camels that live on the Cardano blockchain. Each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
         
-        <a href="https://discord.gg/VhYBSJFd" id="joindiscord" class="d-block mx-auto" target="_blank">
+        <a href="https://discord.gg/wAAmk9rVjb" id="joindiscord" class="d-block mx-auto" target="_blank">
           <div role="button" tabIndex="0" class="rounded-element camel mb-md-5 grow-button hidden1">
             <h5>
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="var(--black)" class="mx-2 bi bi-discord" viewBox="0 -2.5 16 16">
@@ -413,7 +413,7 @@
           <h6>Still Confused...</h6>
         </div>
         <div class="col-md-6 col-sm-12 text-justified lightfw">
-          <p>Join our <a href="https://discord.gg/VhYBSJFd">discord</a> and shoot us a message. Our community is here to help.
+          <p>Join our <a href="https://discord.gg/wAAmk9rVjb">discord</a> and shoot us a message. Our community is here to help.
         </div>
       </div>
     </section>
@@ -422,7 +422,7 @@
   <footer class="p-4 text-center black">
     <ul class="nav justify-content-center pb-2">
       <li class="nav-item"><a href="https://camel-club-cnft.gitbook.io/" class="nav-link text-muted" target="_blank">Docs</a></li>
-      <li class="nav-item"><a  href="https://discord.gg/VhYBSJFd" class="nav-link text-muted my-0 pb-0" target="_blank">
+      <li class="nav-item"><a  href="https://discord.gg/wAAmk9rVjb" class="nav-link text-muted my-0 pb-0" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
           <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
         </svg>
