--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <meta property="og:url" content="https://camelclubcnft.com/">
     <meta property="og:title" content="Camel Club CNFT">
     <meta property="og:description" content="The official website for the OG Camels on the Cardano Blockchain">
-    <meta property="og:image" content="https://camelclubcnft.com/Media/thumbnail.jpg">
+    <meta property="og:image" content="https://camelclubcnft.com/media/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://camelclubcnft.com/">
     <meta property="twitter:title" content="Camel Club CNFT">
     <meta property="twitter:description" content="The official website for the OG Camels on the Cardano Blockchain">
-    <meta property="twitter:image" content="https://camelclubcnft.com/Media/thumbnail.jpg">
+    <meta property="twitter:image" content="https://camelclubcnft.com/media/thumbnail.jpg">
     
-    <link rel="icon" href="Media/camel-logo.png">
+    <link rel="icon" href="media/camel-logo.png">
 
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-md fixed-top navbar-dark black">
       <div class="container">
         <a class="navbar-brand mx-2 p-0" href="#">
-          <img id=logo src="Media/cclogo.svg" alt="Camel Club" height="48px" class="pt-2">
+          <img id=logo src="media/cclogo.svg" alt="Camel Club" height="48px" class="pt-2">
         </a>
 
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,57 +99,57 @@
     <section id="landingscroller">
     <section id="scroller" class="img_container">
       <div class="scrolling">
-        <!-- <img src="Media/4.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/5.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D4.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/6.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/7.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D12.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/17.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D10.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/9.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/10.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/11.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D2.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/13.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/14.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/16.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D3.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/15.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/8.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D8.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/18.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/19.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D5.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/22.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/20.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/3D7.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="Media/21.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/23.webp" width="auto" height="180" class="rounded-element px-2"> -->
-        <img src="Media/3D9.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="Media/24.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <!-- <img src="media/4.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/5.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D4.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/6.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/7.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D12.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/17.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D10.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/9.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/10.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/11.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D2.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/13.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/14.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/16.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D3.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/15.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/8.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D8.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/18.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/19.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D5.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/22.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/20.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/3D7.webp" width="auto" height="180" class="rounded-element px-2">
+        <img src="media/21.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/23.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/3D9.webp" width="auto" height="180" class="rounded-element px-2">
+        <!-- <img src="media/24.webp" width="auto" height="180" class="rounded-element px-2"> -->
       </div>
       <div class="scrolling" aria-hidden="true">
-       <img src="Media/5.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D4.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/7.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D12.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/17.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D10.webp" width="auto" height="180" class="rounded-element px-2">       
-       <img src="Media/10.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/11.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D2.webp" width="auto" height="180" class="rounded-element px-2">       
-       <img src="Media/14.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/16.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D3.webp" width="auto" height="180" class="rounded-element px-2">       
-       <img src="Media/8.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D8.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/19.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D5.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/20.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D7.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/21.webp" width="auto" height="180" class="rounded-element px-2">
-       <img src="Media/3D9.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/5.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D4.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/7.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D12.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/17.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D10.webp" width="auto" height="180" class="rounded-element px-2">       
+       <img src="media/10.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/11.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D2.webp" width="auto" height="180" class="rounded-element px-2">       
+       <img src="media/14.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/16.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D3.webp" width="auto" height="180" class="rounded-element px-2">       
+       <img src="media/8.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D8.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/19.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D5.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/20.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D7.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/21.webp" width="auto" height="180" class="rounded-element px-2">
+       <img src="media/3D9.webp" width="auto" height="180" class="rounded-element px-2">
       </div>
     </section>
     </section>
@@ -199,7 +199,7 @@
 
         </div>
         <div  class="col-md-6 align-items-center my-auto hidden1">
-          <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" alt="Sample OG Camel">
+          <img id="season-img" src="media/OG.png" class="img-fluid rounded-element" alt="Sample OG Camel">
         </div>
       </div>
     </section>
