--- a/index.html
+++ b/index.html
@@ -99,35 +99,26 @@
     <section id="landingscroller">
     <section id="scroller" class="img_container">
       <div class="scrolling">
-        <!-- <img src="media/4.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/5.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D4.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/6.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/7.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D12.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/17.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D10.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/9.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/10.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/11.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D2.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/13.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/14.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/16.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D3.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/15.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/8.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D8.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/18.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/19.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D5.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/22.webp" width="auto" height="180" class="rounded-element px-2"> -->
         <img src="media/20.webp" width="auto" height="180" class="rounded-element px-2">
         <img src="media/3D7.webp" width="auto" height="180" class="rounded-element px-2">
-        <img src="media/21.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/23.webp" width="auto" height="180" class="rounded-element px-2"> -->
+        <img src="media/21.webp" width="auto" height="180" class="rounded-element px-2"
         <img src="media/3D9.webp" width="auto" height="180" class="rounded-element px-2">
-        <!-- <img src="media/24.webp" width="auto" height="180" class="rounded-element px-2"> -->
       </div>
       <div class="scrolling" aria-hidden="true">
        <img src="media/5.webp" width="auto" height="180" class="rounded-element px-2">
