--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <section>
             <ul class="timeline pb-0">
               <li class="timeline-item hidden1">
-                <h5 class="fw-bold mx-1 mb-0">Camel Club Beginings</h5>
+                <h5 class="fw-bold mx-1 mb-0">Camel Club Beginnings</h5>
                 <p class="mb-2 pt-0 lightfw">Early 2021</p>
                   <ul class="lightfw">
                     <li>Finalized Camel Club designs and artwork and generated 5000+ unique camels</li>
@@ -232,7 +232,7 @@
                 <h5 class="fw-bold mr-1">What We're Working on</h5>
                 <p class=" mb-2 pt-0 camel-text">2023 Q1</p>
                 <ul class="lightfw">
-                  <li> Growing our Camel Club community through recruitment and involment initiatives</li>
+                  <li> Growing our Camel Club community through recruitment and involvement initiatives</li>
                   <li>Staking Collaborations</li>
                   <li class="p-0 camel-text"><h5>Camel Club 3D Launch</h5></li>
                   <ul>
