--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h1>Our Caravan</h1>
           <div class="mx-auto" style="max-width: 800px;"> 
             <p>
-              <span class="camel-text"> Did you know?</span> Groups of camels are commonly called caravans, flocks and even trains!
+              <span class="camel-text"> Did you know?</span> Groups of camels are called caravans, flocks and even trains!
                <br>We're going with caravan though...
             </p>
             <p class="text-left lightfw"> 
@@ -239,7 +239,7 @@
           
               <li class="timeline-item hidden1">
                 <h5 class="mr-1">What We're Working on</h5>
-                <p class=" mb-2 pt-0 camel-text">2023 Q1</p>
+                <p class=" mb-2 pt-0 camel-text hidden1">2023 Q1</p>
                 <ul class="lightfw">
                   <li class="hidden1"> Growing our Camel Club community through recruitment and involvement initiatives</li>
                   <li class="hidden1">Staking Collaborations</li>
@@ -258,7 +258,7 @@
                   <li class="hidden1">Begin Camel Racing Development - Bringing NFT based camel racing to Cardano</li>
                   <li class="hidden1">Airdrop special lottery-style NFT prizes to holders from S1 and 3D. </li>
                 </ul>
-                <p class=" mb-2 pt-0 camel-text">2023 Q2</p>
+                <p class=" mb-2 pt-0 camel-text hidden1">2023 Q2</p>
                 <ul class="lightfw">
                   <li class="camel-text hidden1"><h5>Camel Saddle NFT Launch</h5></li>
                   <ul class="hidden1">
@@ -267,7 +267,7 @@
                   </ul>
                   <li class="hidden1">Finalize development of Camel Racing NFT Game</li>
                 </ul>
-                <p class="mb-2 pt-0 camel-text">2023 Q3</p>
+                <p class="mb-2 pt-0 camel-text hidden1">2023 Q3</p>
                 <ul class="lightfw hidden1">
                   <li>Projected Camel Racing Launch</li>
                 </ul>
