--- a/index.html
+++ b/index.html
@@ -285,6 +285,66 @@
       </div>
     </section>
 
+    <a class="anchor" id="story"></a>
+    <section  class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
+      <div id="storyContainer">
+        <div class="card story black-text" style="width: 18rem;">
+          <img class="card-img-top" src="media/club.webp" alt="Card image cap">
+          <div class="card-body camel">
+            <h5 class="card-title">Camel Club Story</h5>
+            <p class="card-text">Follow Cam Hump and Mel Hoof as they discover the Camel Club</p>
+            <button id="s1"> Show Story <span id="pointer" class="side">▾</span></button>
+          </div>
+        </div>
+        <div class="card story black-text" style="width: 18rem;">
+          <img class="card-img-top" src="media/q.png" alt="Card image cap">
+          <div class="card-body camel">
+            <h5 class="card-title">Part II</h5>
+            <p class="card-text">Lore behind Camel Club's Beginnings</p>
+            <button disabled> Coming Soon </button>
+          </div>
+        </div>
+        <div class="card story black-text" style="width: 18rem;">
+          <img class="card-img-top" src="media/q.png" alt="Card image cap">
+          <div class="card-body camel">
+            <h5 class="card-title">Part III</h5>
+            <p class="card-text">More about Camel Club's Evolution</p>
+            <button disabled> Coming Soon </button>
+          </div>
+        </div> 
+    </div>
+      <div id="s1s" class="storytext">
+          <h1 class="text-center">Camel Club Story</h1>
+          <p>
+            &emsp; Our story begins with two camel friends, Cameron Hump and Melvin Hoof - Cam and Mel for short. 
+          </p>
+          <p>
+            &emsp; One day, Cam and Mel were trotting along when they saw an old camel lying on the ground, struggling. They rushed over and helped him to his feet, “Are you OK?” asked Cam. “I’ll be alright, thank you.” The old camel replied. As he stood up, a bandana with a strange symbol on it fell out of his pocket. “That’s a Bandano!” Mel gasped, “You’re the Grandmaster Camel from the legendary Top Humps Dojo! We would give anything for you to teach us!”.
+          </p>
+          <p>
+            &emsp; The old camel smirked, “I am indeed, although in my old age I am not as spry as I used to be. I was just attacked by some ETH maxis after I said I didn’t like paying $1 million in gas fees! They scurried back into their disgusting sewer before I could show them the transaction history of my Daedalus wallet. You are the first camels to stop and help an old-hump like me, I must repay you.”
+          </p>
+          <p>
+            &emsp; With that he pulled out an old map and handed it to the young friends. “I will train you in the ancient art of Top Humps, but first you prove yourselves worthy by finding the fabled treasure of Tutancamelun. I shall be waiting for you at the Top Humps Dojo…” And with that he hurried off, leaving Cam and Mel bewildered. They took one look at each other, gulped, and immediately rushed home to prepare their saddlebags for the adventure ahead. They vowed to find the treasure and learn the secrets of Top Humps, thus earning them their own Bandano and carving their names into Camel legend.
+          </p>
+          <p>
+            &emsp; Traversing the vast desert, Cam and Mel hunted far and wide for the treasure but to no avail. After months of fruitless searching they had all but given up, when they heard thumping music in the distance and saw spotlights dancing across the sky. As they got closer, the music got louder and louder, until they could hardly hear anything else. They rounded a large sand dune and suddenly stopped dead, as they could not believe their eyes.
+          </p>
+          <p>
+            &emsp; Standing before them was a huge building, lit up with neon and reverberating as music pounded out through the walls. In giant gold letters above the door it proudly said “The Camel Club”. Cam and Mel approached slowly, awestruck by the magnificent structure hidden in the middle of the desert. They arrived at the entrance, a dark corridor leading to a large set of double doors. Taking a deep breath, they pushed the doors open and were greeted by the most amazing sight in front of them. Camels of every description were gathered before them, the fur, clothes, hats and even their eyewear made up the most incredible combinations! There were so many crazy characters they did’t know where to look next.
+          </p>
+          <p>
+            &emsp; They stood there surveying the crowd - some were on the dance floor, others at the bar and more just milling about, talking. They could not believe such a place existed. Then, seemingly out of nowhere, a camel with a  strange haircut appeared in front of them. “Welcome to the Camel Club!” he proclaimed “I am Humphrey Lemac, this is my establishment and all are welcome here. Please make yourselves at home! You are entitled to a free drink at the bar, I would recommend the Hump on the Beach. I must warn you though, there is only one rule at the Camel Club, if you see that b***** Camel Baskin you tell me immediately!!” And with that he glided away into the crowd.
+          </p>
+          <p>
+            &emsp; “Shall we go and get a drink?” said Cam. “I think we should, I like the sound of a Hump on the Beach!” Mel replied, “I’ve got a good feeling about this place. Maybe we can find some information about Tutancamelun’s treasure here too.” “Definitely!” agreed Cam, “I like the look of the Camel Club. I wouldn’t want to be anywhere else right now and from what I can see, the party is only just getting started.”
+          </p>
+          <a href="#story" class="w-100">Back to Top</a>
+      </div> 
+    </section>
+    
+
+
     <a class="anchor" id="trade"></a>
     <section class="text-center rounded-top-element white">
       <div class="row m-0 pt-4 px-4">
