--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="collapse navbar-collapse" id="navbarToggle">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item p-2 mx-3" href="#ourcaravan">OUR CARAVAN</a>
+            <a class="nav-item p-2 mx-3" href="#ourcaravan">CARAVAN</a>
             <a class="nav-item p-2 mx-3" href="#roadmap">ROADMAP</a>
             <a class="nav-item p-2 mx-3" href="#trade">TRADE</a>
             <a class="nav-item p-2 mx-3" href="#FAQ">FAQ</a>
